# rag_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  test_openai.sh
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  performance.yml
docker/postgres/: init.sql
docs/: performance.md
migrations/: env.py
migrations/versions/: 4f2030b1b448_add_name_field_to_users_table.py  8c48ae3a36ba_create_documents_and_chunks_tables.py  a33e00f65150_add_pgvector_extension_and_vector_column.py  acfb354e915d_add_owner_id_to_documents_table.py  bb2bae6b1e8f_add_auth_tables_users_and_sessions.py  e42efddff8fa_optimize_vector_indexes.py
scripts/: analyze_index_performance.py  init_db.py
src/: __init__.py
src/application/services/: __init__.py  jwt_service.py
src/application/use_cases/: __init__.py  chunk_document.py  delete_document.py  generate_embeddings.py  get_document.py  get_document_list.py  search_documents.py  store_embeddings.py  update_document.py  upload_document.py
src/application/use_cases/admin/: __init__.py  get_users_list_use_case.py
src/application/use_cases/auth/: __init__.py  change_password_use_case.py  login_use_case.py  logout_use_case.py  refresh_token_use_case.py  register_user_use_case.py  update_user_use_case.py
src/application/use_cases/rag/: __init__.py  build_rag_context.py  generate_rag_answer.py  process_rag_query.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  document.py  rag_query.py  session.py  user.py
src/domain/exceptions/: __init__.py  auth_exceptions.py  base.py  document_exceptions.py  embedding_exceptions.py  llm_exceptions.py  rag_exceptions.py  vector_storage_exceptions.py
src/domain/repositories/: __init__.py  document_repository.py  session_repository.py  user_repository.py  vector_search_repository.py
src/domain/services/: __init__.py  chunking_service.py  password_hasher.py
src/domain/value_objects/: __init__.py  chunk_metadata.py  confidence_score.py  document_chunk.py  document_filter.py  document_id.py  document_list_item.py  document_metadata.py  email.py  hashed_password.py  llm_types.py  page_info.py  prompt_template.py  rag_context.py  search_query.py  search_result.py  user_id.py  user_role.py  vector_search_result.py
src/infrastructure/: __init__.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: __init__.py  connection.py  models.py
src/infrastructure/repositories/: __init__.py  document_repository_impl.py  mock_vector_repository.py  pgvector_repository_impl.py  session_repository_impl.py  sqlite_vector_repository.py  user_repository_impl.py
src/infrastructure/services/: __init__.py  password_hasher_impl.py
src/presentation/: __init__.py  dependencies.py  main.py
src/presentation/api/dependencies/: __init__.py  auth.py  (+1 more)
tests/: conftest.py
tests/benchmarks/: __init__.py  conftest.py  test_basic_benchmark.py
tests/fixtures/: session_fixtures.py  vector_data_generator.py
tests/integration/: conftest.py  test_embedding_generation.py  test_llm_integration.py  test_main.py  test_openai_real.py  test_pgvector_repository.py  test_rag_performance.py  test_rag_pipeline.py  test_search_accuracy.py  test_vector_search_e2e.py
tests/integration/api/: __init__.py
tests/integration/infrastructure/: __init__.py  test_document_repository_integration.py  test_session_repository_integration.py  test_user_repository_integration.py
tests/unit/domain/: test_vector_search_result.py
tests/unit/infrastructure/: __init__.py
(+54 files in other folders)
